# mostbasic

./: Cargo.toml  Dockerfile.raw
data/: movies.json
src/: bin.rs  lib.rs
src/db/: mod.rs
src/model/: mod.rs
