[package]
name = "restapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "restapi"
path = "src/bin.rs"

[dependencies]
rocket = "0.4.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["json"]
